# stereosycn

./: CMakeLists.txt  README.md  package.xml
include/imx_stereo/: dual_camera.hpp
src/: dual_camera.cpp  main.cpp
